# auth-worker

./: .dev.vars  .gitignore  Cargo.toml  README.md  build.rs  config.toml  package-lock.json  package.json  rsa-gen.sh  wrangler.toml
js/: pem.js
migrations/: 0000_initial.sql
public/: login.html
src/: application.rs  applications.rs  auth.rs  d1.rs  error.rs  fetch.rs  keys.rs  lib.rs  oauth.rs  oidc.rs  providers.rs  sql.rs  tokens.rs  user.rs  users.rs  well_known.rs
src/auth/: authorize.rs  callback.rs  refresh.rs  states.rs  token.rs
src/oauth/: authorize.rs  callback.rs  states.rs
src/providers/: mod.rs
src/providers/discord/: mod.rs  provider.toml
src/providers/github/: mod.rs  provider.toml
src/providers/google/: provider.toml
src/users/: upsert.rs
