[package]
name = "auth-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.10"
wasm-bindgen = "0.2.82"
serde-wasm-bindgen = "*"
serde_urlencoded = "0.7.1"

chrono = "*"
rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

oauth2 = { version = "4.2.3", default-features = false }
openidconnect = { version = "3.0.0-alpha.1", default-features = false } # alpha needed for WASM support

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
