[package]
name = "auth-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
axum = { version = "0.6.0", default-features = false, features = ["form", "headers", "json", "query"] }
axum-extra = { version = "0.5.0", features = ["cookie"] }
chrono = "*"
console_error_panic_hook = "0.1.1"
futures = "0.3.26"
oauth2 = { version = "4.2.3", default-features = false, features = ["reqwest"] }
openidconnect = { version = "3.0.0-alpha.1", default-features = false } # alpha needed for WASM support
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
rsa = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
serde-wasm-bindgen = "*"
tower = "0.4.13"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.34"
worker = { path = "../workers-rs/worker" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
